FTP/TLS and SFTP Browser for Mac OS X
http://cyberduck.ch/

Last modified: $Date$
Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 

2.5.4
- [Bugfix] Random crashes (#65, #96)

2.5.3
- [Feature] New and much improved Bonjour implementation
- [Feature] Inline rename files in browser (Return key invokes editing)
- [Feature] Paste files copied in Finder.app (Upload)
- [Feature] Includes Unsanity Crash Reporter
- [Bugfix] Renaming files in expanded tree of outline view bogus
- [Bugfix] Change to invalid directories not catched
- [Bugfix] Second login attempt always fails (SFTP)

2.5.2
- [Bugfix] Spinning beachball of death when connecting on some systems
- [Bugfix] Better validating drop targets in browser

2.5.1
- [Feature] Dragging files to application icon will upload to frontmost browser
- [Feature] Universal Binary
- [Feature] Printing browser view
- [Bugfix] Child items not refreshed properly in outline view
- [Bugfix] Warning before overwrite when moving or renaming files
- [Bugfix] Dragging files to the Finder.app places them at the dropped position
- [Bugfix] Always selecting parent directory as drop target when dragging to outline view
- [Bugfix| Updated application and document icon
- [Bugfix] Number of files in browser window not displayed correctly
- [Bugfix] Don't recurse into directories when deleting symbolic links
- [Bugfix] Overwriting group writable files

2.5
- [Feature] Graphical interface refinements
- [Bugfix] Caching issue with multiple connections to the same host
- [Bugfix] When moving to the parent directory the previous working directory is always selected
- [Bugfix] Selected files are always remembered when refreshing the browsing list
- [Bugfix] Remove custom icon and resource fork after download

2.5b4
- [Feature] Updated navigation bar interface elements
- [Bugfix] Vastly improved performance when listing directories 