@@ -51,9 +51,9 @@ public class Status {
      */
     private boolean complete = false;
 
-    private static final double KILO = 1024; //2^10
-    private static final double MEGA = 1048576; // 2^20
-    private static final double GIGA = 1073741824; // 2^30
+    public static final double KILO = 1024; //2^10
+    public static final double MEGA = 1048576; // 2^20
+    public static final double GIGA = 1073741824; // 2^30
 
     /**
      * @return The size of the file
