@@ -9,7 +9,8 @@
       <key>comment</key>
       <string>Changelog:
 2.5.4
-- [Bugfix] Random crashes (#65, #96)
+- [Bugfix] Random crashes (#65, #94, #96, #121, #122)
+- [Bugfix] High load while downloading (#12)
 
 2.5.3
 - [Feature] New and much improved Bonjour implementation
