@@ -5,7 +5,8 @@ Last modified: $Date$
 Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 
 
 2.5.4
-- [Bugfix] Random crashes (#65, #96)
+- [Bugfix] Random crashes (#65, #94, #96, #121, #122)
+- [Bugfix] High load while downloading (#12)
 
 2.5.3
 - [Feature] New and much improved Bonjour implementation
